RESOLVED FIXED205176
Fix missing exception in JSValue::toWTFStringSlowCase().
https://bugs.webkit.org/show_bug.cgi?id=205176
Summary Fix missing exception in JSValue::toWTFStringSlowCase().
Mark Lam
Reported 2019-12-12 13:19:50 PST
Also fix all the new exception check failures that fall out of change. Also replaced some ASSERTs with EXCEPTION_ASSERT so that we can run the exception check validation on a release build. <rdar://problem/57871899>
Attachments
proposed patch. (7.40 KB, patch)
2019-12-12 13:40 PST, Mark Lam
ysuzuki: review+
Mark Lam
Comment 1 2019-12-12 13:40:14 PST
Created attachment 385543 [details] proposed patch.
Yusuke Suzuki
Comment 2 2019-12-12 13:45:29 PST
Comment on attachment 385543 [details] proposed patch. r=me
Mark Lam
Comment 3 2019-12-12 17:12:59 PST
Thanks for the review. Landed in r253458: <http://trac.webkit.org/r253458>.
Note You need to log in before you can comment on or make changes to this bug.