Fix missing exception in JSValue::toWTFStringSlowCase(). https://bugs.webkit.org/show_bug.cgi?id=205176 <rdar://problem/57871899>

Reviewed by Yusuke Suzuki.

JSTests:

* stress/missing-exception-check-in-JSValue-toWTFStringSlowCase.js: Added.

Source/JavaScriptCore:

Also fix all the new exception check failures that fall out of change.
Also replaced some ASSERTs with EXCEPTION_ASSERT so that we can run the exception
check validation on a release build.

* dfg/DFGOperations.cpp:
* jsc.cpp:
(dumpException):
* runtime/ArrayPrototype.cpp:
(JSC::arrayProtoFuncPush):
* runtime/ExceptionHelpers.cpp:
(JSC::createError):
* runtime/JSCJSValue.cpp:
(JSC::JSValue::toWTFStringSlowCase const):



Canonical link: https://commits.webkit.org/218382@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@253458 268f45cc-cd09-0410-ab3c-d52691b4dbfc